[package]
name = "csat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
log = "0.4.21"
nom = "7.1.3"
oorandom = "11.1.3"
proptest = "1.4.0"

[build-dependencies]
lalrpop = "0.20.2"
